--- a/UploadEncodeAndStreamFiles/UploadEncodeAndStreamFiles.csproj
+++ b/UploadEncodeAndStreamFiles/UploadEncodeAndStreamFiles.csproj
@@ -10,6 +10,10 @@
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="ignite.mp4" />
+  </ItemGroup>
+
  
   <ItemGroup>
     <PackageReference Include="Azure.Storage.Blobs" Version="12.10.0" />
@@ -29,9 +33,6 @@
   <ItemGroup>
     <None Update="appsettings.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="ignite.mp4">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
 
